--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "bootstrap"
   ],
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^5.1.1",
+    "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
+    "@octokit/plugin-rest-endpoint-methods": "^6.7.0",
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
@@ -39,6 +43,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "jest": "^29.1.2",
+    "nock": "^13.2.9",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
