--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,13 @@ jobs:
 
     - name: Run
       uses: ./
+      with:
+        repo: BurntSushi/ripgrep
+        tags: 13.0.0, 12.1.1
+        name: ripgrep
+        main: rg --version
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload Coverage
       if: matrix.coverage
