--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "main": "dist/main/index.js",
   "scripts": {
-    "build": "tsc && ncc build -o dist/main src/main.ts",
+    "build": "tsc && ncc build -o dist/main src/main.ts && ncc build -o dist/post src/post.ts",
     "test": "tsc --noEmit && jest",
     "lint": "eslint **/*.ts --cache",
     "format": "prettier --write **/*.ts",
