Add action post step (#2)

--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,12 @@ inputs:
   main:
     description: The command to run in the main step.
     required: true
+  post:
+    description: The command to run in the post step.
+    required: false
 
 runs:
   using: node16
   main: dist/main/index.js
+  post: dist/post/index.js
+  post-if: success() && env.DISABLE_POST_STEP != 'true'
